@@ -6,7 +6,7 @@
 
     <groupId>com.luoboduner.moo.tool</groupId>
     <artifactId>MooTool</artifactId>
-    <version>1.8.6</version>
+    <version>1.8.7</version>
     <packaging>jar</packaging>
 
     <name>MooTool</name>
@@ -15,9 +15,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>25</maven.compiler.release>
 
-        <java.version>21</java.version>
+        <java.version>25</java.version>
         <logback.version>1.6.0</logback.version>
         <emoji-java.version>5.1.1</emoji-java.version>
         <hutool-all.version>5.8.47</hutool-all.version>
@@ -740,7 +740,7 @@
                         <module>jdk.unsupported</module>
                     </modules>
                     <!-- 这行不能被格式化为多行，否则会出错-->
-                    <vmArgs>-Dswing.aatext=true -XX:+UseZGC -XX:+ZGenerational -XX:-ZUncommit -Xms128m -Xmx512m --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</vmArgs>
+                    <vmArgs>-Dswing.aatext=true -XX:+UseZGC -XX:-ZUncommit -Xms128m -Xmx512m --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</vmArgs>
                 </configuration>
             </plugin>
         </plugins>
